--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,8 @@ dependencies {
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    //horizontal calendarview
+    implementation 'com.oscarvera:scrollhorizontalcalendar:0.4.0.4'
+
 
 }
