--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,6 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
     //horizontal calendarview
     implementation 'com.oscarvera:scrollhorizontalcalendar:0.4.0.4'
+    //calendar
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
 }
