-Create BaseFragment.kt with ViewBinding

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,12 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+systemProp.http.proxyHost=192.168.11.251
+systemProp.http.proxyPassword=Panzer_99_06_07
+systemProp.http.proxyPort=3128
+systemProp.http.proxyUser=azamat.nazarbekov
+systemProp.https.proxyHost=192.168.11.251
+systemProp.https.proxyPassword=Panzer_99_06_07
+systemProp.https.proxyPort=3128
+systemProp.https.proxyUser=azamat.nazarbekov
