--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
 
@@ -80,7 +79,7 @@ dependencies {
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    //horizontal calendarview
+    //horizontal calendarView
     implementation 'com.oscarvera:scrollhorizontalcalendar:0.4.0.4'
     //calendar
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
@@ -88,7 +87,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     //dots indicator
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
-    //konfeti
+    //konfetti
     implementation 'nl.dionsegijn:konfetti:1.3.2'
     //explosionView
     implementation 'tyrantgit:explosionfield:1.0.1'
