--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,14 +33,14 @@
         android:name=".utils.App"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-            android:icon="@mipmap/ic_planner"
+            android:icon="@mipmap/ic_planner_new"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_planner_round"
+        android:roundIcon="@mipmap/ic_planner_new_round"
         android:supportsRtl="true"
         android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
         <receiver android:name=".ui.widget.AppWidget"
-            android:icon="@mipmap/ic_planner"
+            android:icon="@mipmap/ic_planner_new"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
