--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,5 +104,7 @@ dependencies {
     implementation 'com.github.elevenetc:textsurface:0.9.1'
     //spotlight
     implementation 'com.github.takusemba:spotlight:2.0.0'
-
+    //review
+    implementation "com.google.android.play:review-ktx:2.0.0"
+    //    implementation "com.google.android.play:core:1.10.3"
 }
