--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.lawlett.planner"
         minSdkVersion 21
         targetSdkVersion 32
-        versionCode 5
-        versionName "1.0.3"
+        versionCode 7
+        versionName "1.0.5"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -106,5 +106,11 @@ dependencies {
     implementation 'com.github.takusemba:spotlight:2.0.0'
     //review
     implementation "com.google.android.play:review-ktx:2.0.0"
+
+    implementation("com.google.android.play:app-update:2.0.0")
+
+    // For Kotlin users also import the Kotlin extensions library for Play In-App Update:
+    implementation("com.google.android.play:app-update-ktx:2.0.0")
+
     //    implementation "com.google.android.play:core:1.10.3"
 }
