--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 32
-    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.lawlett.planner"
@@ -27,6 +26,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
     }
     bundle {
         language {
@@ -55,6 +57,9 @@ dependencies {
     implementation "androidx.room:room-ktx:2.4.1"
     implementation 'com.google.firebase:firebase-analytics-ktx:20.1.0'
     implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.8'
+    implementation 'androidx.databinding:databinding-compiler-common:7.1.2'
+    implementation 'androidx.test.ext:junit-ktx:1.1.4'
+    testImplementation 'junit:junit:4.12'
     annotationProcessor "androidx.room:room-compiler:2.4.1"
     androidTestImplementation "androidx.room:room-testing:2.4.1"
 
@@ -113,4 +118,7 @@ dependencies {
     implementation("com.google.android.play:app-update-ktx:2.0.0")
 
     //    implementation "com.google.android.play:core:1.10.3"
+
+
+
 }
