--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        maven { url "https://jitpack.io" }
-        google()
-        jcenter()
+        maven {
+            url 'https://mvnrepository.com/artifact/com.github.gundy/semver4j'
+            google()
+            jcenter()
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1")
         classpath 'com.google.gms:google-services:4.3.10'
