--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        maven { url "https://jitpack.io" }
-        google()
-        jcenter()
+        maven {
+            url 'https://mvnrepository.com/artifact/com.github.gundy/semver4j'
+            google()
+            jcenter()
+        }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
